[package]
name = "pest-css-parser"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A stylesheet (css) parser using pest"
homepage = "https://github.com/DotWith/pest-css-parser/"
documentation = "https://docs.rs/pest-css-parser"
repository = "https://github.com/DotWith/pest-css-parser/"
readme = "README.md"

[dependencies]
pest = "2.6.0"
pest_derive = "2.6.0"
thiserror = "1.0.40"
once_cell = "1.17.1"
regex = "1.8.1"

[[example]]
name = "parse"
path = "examples/parse.rs"
